# SkillsFramework

./: .gitignore  LICENSE  README.md  README.zh-CN.md  pyproject.toml
app/: config.py  context.py  exceptions.py  llm.py  logger.py  schema.py
app/agents/: __init__.py  base.py  react.py  skills.py  toolcall.py
app/prompts/: skills.py  toolcall.py
app/tools/: __init__.py  base.py  mcp.py  registry.py  skillloader.py
app/tools/builtin/: __init__.py  ask_human.py  bash.py  file_edit.py  getweather.py  load_skill.py  terminate.py
skills/: web-search.skill
skills/web-search/: SKILL.md
skills/web-search/assets/: search_strategy_template.md  source_evaluation_checklist.md
skills/web-search/references/: search_operators.md  search_usage.md  source_evaluation.md  specialized_searches.md
skills/web-search/scripts/: duckduckgo_search.py  quick_search.sh  requirements.txt  search_helpers.py  simple_search.py
tests/: skillsagent.py  test_mcp_mount.py  toolcallagent.py
